fix alg returned in encrypt, add private keys

--- a/crypto/hw5/pkfernet.ipynb
+++ b/crypto/hw5/pkfernet.ipynb
@@ -63,7 +63,6 @@
     "    \"dan\": {\n",
     "        \"ecc.sec224r1.1.enc.pub\": \"-----BEGIN PUBLIC KEY-----\\nME4wEAYHKoZIzj0CAQYFK4EEACEDOgAEOsMppuM2VpprgLWjr1Heb04pO9x1kYR/\\nEjxgvneTmmNOSRp+E5MFjhKHLjQ9EajwIsaQl7rADMc=\\n-----END PUBLIC KEY-----\",\n",
     "        \"ecc.sec224r1.1.sig.pub\": \"-----BEGIN PUBLIC KEY-----\\nME4wEAYHKoZIzj0CAQYFK4EEACEDOgAEWvkEcVMi8tV66bj7rqgOq8dOl7B5WWZd\\nmJd/oRBtHhjLBwyELXrFYYa2buoLgaP4tsh/9JOhsPQ=\\n-----END PUBLIC KEY-----\"\n",
-    "#         \"dsa.1024.1.sig.pub\":\n",
     "    }\n",
     "}"
    ]
@@ -93,6 +92,24 @@
     "        \"dsa.1024.1.sig.pub\": \"-----BEGIN PUBLIC KEY-----\\nMIIBtzCCASsGByqGSM44BAEwggEeAoGBAK0wjowa0YhHl_wB8jgfN6sl4HeiCfSf\\nE99DY7McBs7Op9L8qMTQt151fiIcaaQeAOpzUqI6ofk-1iaSK0iKTQ63t9QLl1mz\\nbknp0vMny4IW2PqSkE14OZtqaDzRsWJqKAIb91BdKGyqdFNmRfHddpaPuDNawOge\\ng8yIe6P4QBN1AhUAnbg5PlIuvavIX2g_YIC9uGbm1xkCgYBW93q4kiXqdPki7a5j\\ngYSGD9uul58q6h361gl_BQcTwvf2VJioffL7HqfDS--jmS8_cZCJ3VPeXqUvDCOz\\nLKnwl9Fc3s7xG8Ks0R0PyLp3RikUKWv1CtT6GmS81JrzWvPrgKBWbIrIruddLtvb\\nFKX0l4BHV751QLLU7mmcPbcSFgOBhQACgYEAiKIEcb55nZF-_E38puoOeGqvv2sy\\nTnE9Prek5kpAzqA9Q9VT4m4SmKlFAbE6qC_7IxgQTjoKs301EZSWeA15z6vcnOo-\\nr-N5Z8Gn7qwJDzCL3NJpRhTQgBVL_Xh4xpJS-MM1EoEEqKBem8gCGFM-TGLdrx-K\\nMDbcPF_UfT46rY0=\\n-----END PUBLIC KEY-----\\n\", \n",
     "        \"ecc.sec224r1.1.enc.pub\": \"-----BEGIN PUBLIC KEY-----\\nME4wEAYHKoZIzj0CAQYFK4EEACEDOgAElFmWnRvIgK53WG088jVdDFhMgvfP7SHS\\nNzPpLe4Y7NdvjawlwfTb5k3eIvT0hTRra431odw19fc=\\n-----END PUBLIC KEY-----\\n\"\n",
     "    }\n",
+    "}\n",
+    "\n",
+    "test_kr = {\n",
+    "    \"asheesh_teja\": {\n",
+    "        'ecc.sect571r1.1.enc.pub': '-----BEGIN PUBLIC KEY-----\\nMIGnMBAGByqGSM49AgEGBSuBBAAnA4GSAAQDdFTVWAhIlyVYby0ghHva8IV9fGUD\\nS4Lio7wLeAWnpVHpizPZJJ3178FbVUoRnOYEque22xt4bfcec6LBTymk8aKo6reM\\nf5IDzowZ6l0Jgi6Hr6jT5Vp/5kWB3k/he3gdoQ4czSzcK5MLK8hSWtHrL5uWupIt\\ntZyisEVzSD9FO6wp6L1sRq/eXGvcMIJc/os=\\n-----END PUBLIC KEY-----\\n',\n",
+    "        'ecc.secp256r1.1.sig.pub': '-----BEGIN PUBLIC KEY-----\\nMFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEg9EPhZ7DIXVSs8VkmhgEHTDWUkzw\\n5vfMDP75tWbjzZ99qfkT1xsED6X3aMzBLt8pcxlU2wxyBxRn2vkbBDwqjw==\\n-----END PUBLIC KEY-----\\n'\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "test_kr_2 = {\n",
+    "    \"ecc.secp224r1.1.enc.priv\": \"-----BEGIN EC PRIVATE KEY-----\\nMGgCAQEEHIy9A0wpj7UR6+9FgGJiBe+FsR714WXFmB2DAiOgBwYFK4EEACGhPAM6\\nAAQ6wymm4zZWmmuAtaOvUd5vTik73HWRhH8SPGC+d5OaY05JGn4TkwWOEocuND0R\\nqPAixpCXusAMxw==\\n-----END EC PRIVATE KEY-----\",\n",
+    "    \"ecc.secp224r1.1.sig.priv\": \"-----BEGIN EC PRIVATE KEY-----\\nMGgCAQEEHKDxHuvyYU93h7YxWekVhwfB3CvKvbPGS1YL95+gBwYFK4EEACGhPAM6\\nAARa+QRxUyLy1XrpuPuuqA6rx06XsHlZZl2Yl3+hEG0eGMsHDIQtesVhhrZu6guB\\no/i2yH/0k6Gw9A==\\n-----END EC PRIVATE KEY-----\",\n",
+    "    \"ecc.secp224r1.1.enc.priv\": \"-----BEGIN EC PRIVATE KEY-----\\nMGgCAQEEHIy9A0wpj7UR6+9FgGJiBe+FsR714WXFmB2DAiOgBwYFK4EEACGhPAM6\\nAAQ6wymm4zZWmmuAtaOvUd5vTik73HWRhH8SPGC+d5OaY05JGn4TkwWOEocuND0R\\nqPAixpCXusAMxw==\\n-----END EC PRIVATE KEY-----\",\n",
+    "    \"ecc.secp224r1.1.sig.priv\": \"-----BEGIN EC PRIVATE KEY-----\\nMGgCAQEEHKDxHuvyYU93h7YxWekVhwfB3CvKvbPGS1YL95+gBwYFK4EEACGhPAM6\\nAARa+QRxUyLy1XrpuPuuqA6rx06XsHlZZl2Yl3+hEG0eGMsHDIQtesVhhrZu6guB\\no/i2yH/0k6Gw9A==\\n-----END EC PRIVATE KEY-----\",\n",
+    "    \"ecc.sec571r1.1.enc.priv\": \"-----BEGIN EC PRIVATE KEY-----\\nMIHuAgEBBEgCmpoLrYY2dVGFsC5npHTTUDx9fqsn2ZuDiFCcCPbZrv9aLn130iLv\\nUski4EH2UQcZnuiQLzt1BNYShP8ApcKAoTulRHuHErSgBwYFK4EEACehgZUDgZIA\\nBAJuiwyk1Ablmba5ka467lkiQy0//PCYScU3qzRCAfCwe1YdSOPQ+AmeD8JJpNIr\\norT5+SSpnplSqPlsoGiNXCa0PHF91lllwwL10cNb5eHGzs5fYk7+va3CooGPo0lz\\ns7WUnqzFjkkeOs//GIcP9YlBeORS559mvVq0YJ58dh5b3C6lmIpYCfG1Nt0e7Tn5\\ntQ==\\n-----END EC PRIVATE KEY-----\",\n",
+    "    'ecc.sec571r1.1.sig.priv': \"-----BEGIN EC PRIVATE KEY-----\\nMIHtAgEBBEdMKzALb1qB4YzMYrerGLPSTqI24Hu0qvjp5I6A01x9odFscsAy2uPR\\nfRhmVEKFSEq0PD059rIrZ0Bk8aIbcFnPj8EF0fzbtqAHBgUrgQQAJ6GBlQOBkgAE\\nAg/InE0ogbFuZTbwA5jIjzNIsGWwdzK67En2ecdoZmecgH+1YEqwirb/uyBTTNlq\\njDageG5ApJJK3ddwRrwEX+SuRHtTbs+fAZJ4Mf1i4kYYyus0wDew3zAaG+5Olqtz\\nbEacghXR4i+Uy/v0aDE4tJoFf3Puspl6VoYPOMk0NgvPC0gAnYDZDzySyeJXeUoT\\n-----END EC PRIVATE KEY-----\",\n",
+    "    \"ecc.sect571r1.1.enc.priv\": \"-----BEGIN EC PRIVATE KEY-----\\nMIHuAgEBBEgCmpoLrYY2dVGFsC5npHTTUDx9fqsn2ZuDiFCcCPbZrv9aLn130iLv\\nUski4EH2UQcZnuiQLzt1BNYShP8ApcKAoTulRHuHErSgBwYFK4EEACehgZUDgZIA\\nBAJuiwyk1Ablmba5ka467lkiQy0//PCYScU3qzRCAfCwe1YdSOPQ+AmeD8JJpNIr\\norT5+SSpnplSqPlsoGiNXCa0PHF91lllwwL10cNb5eHGzs5fYk7+va3CooGPo0lz\\ns7WUnqzFjkkeOs//GIcP9YlBeORS559mvVq0YJ58dh5b3C6lmIpYCfG1Nt0e7Tn5\\ntQ==\\n-----END EC PRIVATE KEY-----\",\n",
+    "    'ecc.sect571r1.1.sig.priv': \"-----BEGIN EC PRIVATE KEY-----\\nMIHtAgEBBEdMKzALb1qB4YzMYrerGLPSTqI24Hu0qvjp5I6A01x9odFscsAy2uPR\\nfRhmVEKFSEq0PD059rIrZ0Bk8aIbcFnPj8EF0fzbtqAHBgUrgQQAJ6GBlQOBkgAE\\nAg/InE0ogbFuZTbwA5jIjzNIsGWwdzK67En2ecdoZmecgH+1YEqwirb/uyBTTNlq\\njDageG5ApJJK3ddwRrwEX+SuRHtTbs+fAZJ4Mf1i4kYYyus0wDew3zAaG+5Olqtz\\nbEacghXR4i+Uy/v0aDE4tJoFf3Puspl6VoYPOMk0NgvPC0gAnYDZDzySyeJXeUoT\\n-----END EC PRIVATE KEY-----\"\n",
     "}"
    ]
   },
@@ -127,6 +144,11 @@
     "    \"sect163r2\": asym.ec.SECT163R2,\n",
     "    \"sec233k1\": asym.ec.SECT233K1,\n",
     "    \"sect233k1\": asym.ec.SECT233K1,\n",
+    "    \"sect233k1\": asym.ec.SECT233K1,\n",
+    "    \"sect571r1\": asym.ec.SECT571R1,\n",
+    "    \"sec571r1\": asym.ec.SECT571R1,\n",
+    "    \"sect571k1\": asym.ec.SECT571K1,\n",
+    "    \"sec571k1\": asym.ec.SECT571K1,\n",
     "}\n",
     "\n",
     "hash_switcher = {\n",
@@ -158,9 +180,9 @@
     "    def url_safe_pem(self, pem_key, restore=False):\n",
     "        key = re.findall(\"-----BEGIN PUBLIC KEY-----(.*)-----END PUBLIC KEY-----\", pem_key, re.DOTALL)[0]\n",
     "        if restore:\n",
-    "            key.replace(\"-\", \"+\").replace(\"_\", \"/\")\n",
+    "            key = key.replace(\"-\", \"+\").replace(\"_\", \"/\")\n",
     "        else:\n",
-    "            key.replace(\"+\", \"-\").replace(\"/\", \"_\")\n",
+    "            key = key.replace(\"+\", \"-\").replace(\"/\", \"_\")\n",
     "        pem_key = \"-----BEGIN PUBLIC KEY-----\" + key + \"-----END PUBLIC KEY-----\"\n",
     "        return pem_key\n",
     "    \n",
@@ -196,7 +218,6 @@
     "        # ensure keyrings are populated with sender and receiver\n",
     "#         and sender_sign_header in self.priv_keyring\n",
     "        assert receiver_name in self.pub_keyrings, \"Keys must exist for both the sender and receiver to encrypt.\"\n",
-    "        \n",
     "        alg, key_param, ver, usage, key_type = receiver_enc_pub_key_alias.split(\".\")\n",
     "#         alg_send, key_param_send, ver_send, usage_send, key_type_send = sender_sign_priv_key_alias.split(\".\")\n",
     "#         TODO: ASSERT SENDER AND RECEIVER CAN AGREE UPON ALGORITHM\n",
@@ -235,21 +256,25 @@
     "        fern = Fernet2(urlsafe_b64encode(shared_key))\n",
     "        f2_ctxt = fern.encrypt(msg, adata)\n",
     "\n",
-    "        return adata + \"|\" + urlsafe_b64encode(alg) + \"|\" + urlsafe_b64encode(self.url_safe_pem(rpk)) + \"|\" + f2_ctxt\n",
+    "        return adata + \"|\" + urlsafe_b64encode(\".\".join(receiver_enc_pub_key_alias.split('.')[:3])) + \"|\" + self.url_safe_pem(rpk) + \"|\" + f2_ctxt\n",
     "\n",
     "    def decrypt(self, ctx, sender_name, verify_also=True):\n",
-    "        adata, alg, rpk, f2_ctxt = ctx.split('|')\n",
+    "        if len(ctx.split('|')) == 3:\n",
+    "            adata = \"\"\n",
+    "            alg_alias, rpk, f2_ctxt = ctx.split('|')\n",
+    "        else:\n",
+    "            adata, alg_alias, rpk, f2_ctxt = ctx.split('|')\n",
     "        \n",
-    "        alg = urlsafe_b64decode(alg)\n",
-    "        rpk = self.url_safe_pem(urlsafe_b64decode(rpk), restore=True)\n",
+    "        alg_alias = urlsafe_b64decode(alg_alias)\n",
+    "        rpk = self.url_safe_pem(rpk, restore=True)\n",
     "        rpk = load_pem_public_key(rpk, backend=default_backend())\n",
-    "        \n",
-    "        if alg == \"ecc\":\n",
-    "            key_param = rpk.curve.name[:3] + rpk.curve.name[4:]\n",
+    "\n",
+    "        alg, key_param, ver = alg_alias.split('.')\n",
+    "#         if alg == \"ecc\":\n",
+    "#             key_param = rpk.curve.name[:3] + rpk.curve.name[4:]\n",
     "#         elif alg == \"rsa\":\n",
     "\n",
     "        # use static private key for decryption\n",
-    "    \n",
     "        for key in self.priv_keyring:\n",
     "            if alg in key and key_param in key and 'enc' in key:\n",
     "                rec_priv_key = load_pem_private_key(bytes(self.priv_keyring[key]), password=None, backend=default_backend())\n",
@@ -258,7 +283,6 @@
     "        # TODO: parse header and decide which algorithm, double check shared key and fernet isntantiations\n",
     "        assert 'rec_priv_key' in locals(), \"Receiver does not have a corresponding {0} private key.\".format(alg + '.' + key_param)\n",
     "        shared_key = rec_priv_key.exchange(asym.ec.ECDH(), rpk)\n",
-    "        \n",
     "        \n",
     "        fern = Fernet2(urlsafe_b64encode(shared_key))\n",
     "        msg = fern.decrypt(f2_ctxt, associated_data=adata)\n",
@@ -372,7 +396,40 @@
    },
    "outputs": [],
    "source": [
-    "pf = PKFernet(private_keyring, public_keyrings)"
+    "pf = PKFernet(test_kr_2, test_kr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "ctx = pf.encrypt(\"MESSAGE\", \"asheesh_teja\", 'ecc.sect571r1.1.enc.pub', \"ecdsa_with_sha256.secp571r1.1.sig.priv\", \"ADATA\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ADATA|ZWNjLnNlY3Q1NzFyMS4x|-----BEGIN PUBLIC KEY-----\\nMIGnMBAGByqGSM49AgEGBSuBBAAnA4GSAAQEuVioEhvUYlL49iI1_menh52Dtl6l\\nlhc5h6ygru2daGqjWZS640T3q0UOmDssEIXoI2RDD1kJAUdGk_eYmWLFaQjHy-nx\\nAt8DA8uchFsKq_HZZW82sZB6X0ez1ux8I0zDy3jZrTCcBcScXv-PhxuG3cCA4haH\\nq_cSE8GIPItUb51vaXSEmyxid7SKhvzYlIk=\\n-----END PUBLIC KEY-----|gQFfPyF4g14M4JulnXftPXvdUHVtqGVD8mGb_yc2d8PrfvXr581Ut53rGaAs1BL7CJUwqZuJ6fZ6VfH-VbtUOhQXaAEgHPUx4V5KdmPV2Bs73jXf3rE7f1PbN3p1Yj1G_PmDmTG-PjuzWR52ktwhAZ8NShAITbfvnV1dmLoJQmv4M61PCMQzxclyIs_X3gQjs5Uu4YepXMzm5b36YcvNP7obGAJiDYyxSvXizy0x5dXNMminjxJ7szTsCm-cOCJQGBmhzGi9cJi0mi5sfQVE7-0='"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ctx"
    ]
   },
   {
@@ -381,28 +438,18 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": [
-    "ctx = pf.encrypt(\"MESSAGE\", \"asheesh_teja\", \"ecc.sec224r1.1.enc.pub\", \"ecdsa_with_sha256.secp224r1.1.sig.priv\", \"ADATA\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
    "outputs": [
     {
-     "ename": "AssertionError",
-     "evalue": "Receiver does not have a corresponding ecc.sec224r1 private key.",
+     "ename": "InvalidToken",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-15-002223e04a68>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecrypt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mctx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"asheesh_teja\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverify_also\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-7-76f460ef7e01>\u001b[0m in \u001b[0;36mdecrypt\u001b[0;34m(self, ctx, sender_name, verify_also)\u001b[0m\n\u001b[1;32m    106\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    107\u001b[0m         \u001b[0;31m# TODO: parse header and decide which algorithm, double check shared key and fernet isntantiations\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 108\u001b[0;31m         \u001b[0;32massert\u001b[0m \u001b[0;34m'rec_priv_key'\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlocals\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Receiver does not have a corresponding {0} private key.\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0malg\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'.'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mkey_param\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    109\u001b[0m         \u001b[0mshared_key\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrec_priv_key\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexchange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0masym\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mec\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mECDH\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrpk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    110\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: Receiver does not have a corresponding ecc.sec224r1 private key."
+      "\u001b[0;31mInvalidToken\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-002223e04a68>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecrypt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mctx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"asheesh_teja\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverify_also\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-7-8201e597b022>\u001b[0m in \u001b[0;36mdecrypt\u001b[0;34m(self, ctx, sender_name, verify_also)\u001b[0m\n\u001b[1;32m    113\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    114\u001b[0m         \u001b[0mfern\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFernet2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0murlsafe_b64encode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshared_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 115\u001b[0;31m         \u001b[0mmsg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfern\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecrypt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf2_ctxt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0massociated_data\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0madata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    116\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    117\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mverify_also\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/Dov/cornell-tech/crypto/hw5/fernet2.pyc\u001b[0m in \u001b[0;36mdecrypt\u001b[0;34m(self, ctxt, ttl, associated_data)\u001b[0m\n\u001b[1;32m    119\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSHA256hmac\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_signing_key\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbasic_parts\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msig\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m32\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    120\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mInvalidSignature\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 121\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mInvalidToken\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    122\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    123\u001b[0m         \u001b[0;31m# Now decrypt the text\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mInvalidToken\u001b[0m: "
      ]
     }
    ],
@@ -425,18 +472,6 @@
    "display_name": "Python 2",
    "language": "python",
    "name": "python2"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.9"
   }
  },
  "nbformat": 4,
